# distmat

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: builder.rs  formats.rs  lib.rs  square.rs  symmetric.rs
src/formats/: phylip.rs  tabular.rs
tests/phylip/: lower.dist  square_multiline.dist
