[package]
name = "distmat"
version = "0.3.0"
edition = "2021"
authors = ["Carl Suster <Carl.Suster@health.nsw.gov.au>"]
description = "Distance matrix data types and file formats"
license = "MIT OR Apache-2.0"
categories = ["mathematics", "parsing", "science"]
repository = "https://github.com/cidm-ph/distmat/"
readme = "README.md"

[dependencies]
thiserror = "1.0"
flate2 = "1.0"
